# tinylapse-cmdline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  main.cpp
examples/: CMakeLists.txt
examples/encode_video/: CMakeLists.txt  main.c
examples/hello_world/: CMakeLists.txt
hello_world/: main.cpp
scripts/: build_ffmpeg_debug.sh
